--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-cssbeautify": "^3.0.1",
     "gulp-cssnano": "^2.1.3",
+    "gulp-favicons": "^3.0.0",
+    "gulp-filter": "^7.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-notify": "^4.0.0",
     "gulp-plumber": "^1.2.1",
